--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prettier": "2.2.1"
   },
   "homepage": "https://github.com/yinkakun/gatsby-starter-glass#readme",
@@ -51,9 +52,9 @@
     "build": "gatsby build",
     "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b main"
   }
 }
